[package]
name = "advent-of-code-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
diagonal = "0.1.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
md5 = "0.8.0"
rand = "0.10.0"
regex = "1.11"
